# third-party-ace-hub-demo

./: README.md  pyproject.toml  stack_3_blocks_result.json
.ace/: config
.ace/devices/xarm-vision/: device.json  device.py
.ace/nodes/xarm-vision/detect_objects/: node.json
.ace/nodes/xarm-vision/grab_object/: node.json
.ace/nodes/xarm-vision/move_to/: node.json
.ace/nodes/xarm-vision/release_object/: node.json
.ace/nodes/xarm-vision/stack_objects/: node.json
.ace/nodes/xarm-vision/take_photo/: node.json
.ace/workflows/: stack_3_blocks.json
xarm_vision/: __init__.py  core.py
