[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xarm-vision"
version = "1.0.0"
description = "6-DOF robotic arm with camera for vision-guided manipulation"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "MockCorp" },
]
keywords = ["robotics", "simulator", "ace"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "Pillow",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.hatch.build.targets.wheel]
packages = ["xarm_vision"]
